--- a/blog/templates/templates/nav.html
+++ b/blog/templates/templates/nav.html
@@ -32,6 +32,9 @@
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="{% url 'login' %}">Entrar</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="{% url 'user.create' %}">Crear Usuario</a>
+                </li>
                 {% endif %}
             </ul>
         </div>
